@@ -9,10 +9,12 @@ import ru.alamics.sso.registration.FoundUserPostException;
 import ru.alamics.sso.registration.dto.UserPostRequest;
 import ru.alamics.sso.registration.dto.UserPostResponse;
 import ru.alamics.sso.registration.service.UserPostService;
+import ru.alamics.sso.util.validator.NotValidException;
 
 import javax.annotation.Resource;
 import javax.ejb.Stateless;
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -53,9 +55,9 @@ public class UserPostFacade {
         return userPosts;
     }
 
-    public UserPostResponse save(UserPostRequest userPostRequest) throws NotFoundException, FoundUserPostException {
+    public UserPostResponse save(UserPostRequest userPostRequest) throws NotFoundException, FoundUserPostException, NotValidException {
         UserPostResponse post = userPostService.save(userPostRequest);
-        addCustomersToRequest(List.of(post));
+        addCustomersToRequest(Arrays.asList(post));
         return post;
     }
 
